--- a/manifest.json
+++ b/manifest.json
@@ -76,6 +76,20 @@
         "enable" : false
     },
     "h5" : {
+		"devServer": {
+			"port":8080,
+			"disableHostCheck": true,
+			"proxy": {
+				"/api": {
+					"target": "http://192.168.2.217:8080/api/",
+					"changeOrigin": true,
+					"secure": false,
+					"pathRewrite": {
+						"^/api": "" 
+					}
+				}
+			}
+		},
         "template" : "template.h5.html",
         "router" : {
             "mode" : "history",
